# oriflamms

./: README.md
0.4/src/: CMakeLists.txt  ChangeLog
0.4/src/oriflamms/: OriAlignConfig.h  OriAlignDialog.cpp  OriGUI.h  OriLines.cpp  OriLines.h  OriProject.cpp  OriProject.h  OriStruct.cpp  OriStruct.h  OriTEIImporter.cpp
0.4/src/po/: POTFILES.in  en_GB.gmo  en_GB.po  fr.gmo  fr.po  oriflamms.pot
0.5/src/: CMakeLists.txt  ChangeLog  License.txt
0.5/src/oriflamms/: CMakeLists.txt  OriAlignConfig.h  OriCharacter.cpp  OriCharacter.h  OriDocument.cpp  OriDocument.h  OriFeatures.h  OriGUI.cpp  OriGUI.h  OriLines.cpp  OriProject.h  OriStruct.cpp  OriTEIDisplay.h  OriValidationPanel.cpp  OriValidationPanel.h  main.cpp  orisig.xml
0.5/src/po/: POTFILES.in  en_GB.gmo  en_GB.po  fr.gmo  fr.po  oriflamms.pot
0.5/src/utils/: signatures.cpp
0.6/src/: CMakeLists.txt
0.6/src/oriflamms/: OriAlignDialog.h  OriConfig.cpp  OriConfig.h  OriDocument.cpp  OriGUI.cpp  OriValidation.h  OriViewImpl.h  license.hpp  main.cpp  orisig.xml
0.6/src/po/: en_GB.po  fr.gmo  oriflamms.pot
branches/0.5/src/: CMakeLists.txt  License.txt
branches/0.5/src/oriflamms/: OriDocument.cpp  OriDocument.h  OriGUI.cpp  OriGUI.h  OriLines.cpp  OriLines.h  OriProject.cpp  OriStruct.h  OriTEIImporter.cpp  OriTEIImporter.h  OriTextSignature.cpp  OriTextSignature.h  OriValidation.cpp  OriValidation.h  OriValidationPanel.cpp  OriValidationPanel.h
branches/0.5/src/po/: en_GB.po  fr.gmo  fr.po  oriflamms.pot
branches/0.5/src/utils/: CMakeLists.txt  test.cpp  test.h
branches/0.6/src/: CMakeLists.txt  NSIS.template.in  uninstallcrn.nsi
branches/0.6/src/oriflamms/: CMakeLists.txt  OriCharacter.cpp  OriDocument.cpp  OriDocument.h  OriGUI.cpp  OriLines.cpp  OriTextSignature.cpp  OriValidation.cpp  OriValidationPanel.cpp  main.cpp
branches/0.6/src/utils/: CMakeLists.txt
src/: CMakeLists.txt  CPackDeb.cmake  ChangeLog  Doxyfile  Doxyfile.in  License.txt  NSIS.template.in  ReadPkgConfig.cmake  installcrn.nsi
src/oriflamms/: CMakeLists.txt  OriAlignConfig.h  OriAlignDialog.cpp  OriCharacter.cpp  OriCharacter.h  OriConfig.cpp  OriConfig.h  OriDocument.cpp  OriDocument.h  OriEntityDialog.cpp  OriEntityManager.cpp  OriEntityManager.h  OriFeatures.cpp  OriFeatures.h  OriGUI.cpp  OriGUI.h  OriLines.cpp  OriLines.h  OriProject.cpp  OriProject.h  OriStruct.cpp  OriTEIDisplay.h  OriTEIImporter.cpp  OriTEIImporter.h  OriTextSignature.cpp  OriTextSignature.h  OriValidation.cpp  OriValidation.h  OriValidationPanel.cpp  OriValidationPanel.h  OriViewImpl.h  Oriflamms.desktop.in  license.hpp  main.cpp  orient.xml  orisig.xml
src/po/: LINGUAS  POTFILES.in  en_GB.gmo  en_GB.po  fr.gmo  fr.po  oriflamms.pot
src/utils/: CMakeLists.txt  entities.cpp  signatures.cpp
tags/0.3.3/: Makefile
tags/0.3.3/src/: CMakeLists.txt  License.txt  NSIS.template.in
tags/0.3.3/src/oriflamms/: OriConfig.h  OriFeatures.cpp  OriGUI.cpp  OriGUI.h  OriLines.cpp  OriLines.h  OriProject.h  OriStruct.h  OriValidation.cpp  main.cpp  orient.xml
tags/0.3.3/src/po/: POTFILES.in  en_GB.gmo
tags/0.3.3/src/utils/: CMakeLists.txt  signatures.cpp
tags/0.4.4/src/: CMakeLists.txt
tags/0.4.4/src/oriflamms/: OriLines.cpp  OriStruct.h  OriTEIImporter.cpp  oriflamms_config.h.in
tags/0.4.4/src/po/: en_GB.gmo
tags/0.4.4/src/utils/: signatures.cpp
tags/0.4.6/: Makefile
tags/0.4.6/src/oriflamms/: OriGUI.cpp  OriProject.cpp
tags/0.4.6/src/po/: POTFILES.in  fr.po  oriflamms.pot
tags/0.5.11/src/oriflamms/: OriCharacter.h  OriLines.cpp  OriViewImpl.h
tags/0.5.14/src/: ChangeLog  GettextTranslate.cmake
tags/0.5.14/src/oriflamms/: OriDocument.cpp  OriDocument.h  OriGUI.cpp  OriGUI.h
tags/0.5.15/src/oriflamms/: CMakeLists.txt  OriCharacter.cpp  OriConfig.cpp  OriGUI.cpp  OriTEIDisplay.cpp  OriValidation.cpp  OriValidationPanel.h
tags/0.5.15/src/po/: en_GB.gmo  oriflamms.pot
tags/0.5.4/src/: ChangeLog
tags/0.5.4/src/oriflamms/: OriEntityDialog.h  OriGUI.cpp  genetic.hpp
tags/0.5.4/src/po/: fr.po
tags/0.5.5/src/: CPackDeb.cmake
tags/0.5.5/src/oriflamms/: OriConfig.h
tags/0.5.5/src/po/: en_GB.gmo
tags/0.5.9/src/oriflamms/: OriConfig.cpp  OriDocument.h  OriValidation.cpp
tags/0.6.0/src/: CMakeLists.txt  ChangeLog
tags/0.6.0/src/oriflamms/: orisig.xml
tags/0.6.1/src/: CMakeLists.txt  ChangeLog  ReadVS10Props.cmake  installcrn.nsi  uninstallcrn.nsi
tags/0.6.1/src/oriflamms/: OriConfig.cpp
tags/0.6.1/src/po/: en_GB.gmo  fr.po
trunk/0.4/src/: ChangeLog
trunk/0.4/src/oriflamms/: OriAlignConfig.h  OriAlignDialog.h  OriFeatures.cpp  OriGUI.cpp  OriGUI.h  OriLines.cpp  OriProject.cpp  OriProject.h  OriStruct.cpp
trunk/0.4/src/po/: en_GB.gmo  en_GB.po  fr.gmo  fr.po  oriflamms.pot
trunk/0.5/src/: CMakeLists.txt  ChangeLog
trunk/0.5/src/oriflamms/: CMakeLists.txt  OriCharacter.cpp  OriCharacter.h  OriDocument.cpp  OriDocument.h  OriEntityDialog.cpp  OriFeatures.cpp  OriFeatures.h  OriGUI.cpp  OriGUI.h  OriLines.cpp  OriStruct.h  OriValidation.cpp  OriValidationPanel.cpp  OriValidationPanel.h  OriViewImpl.h  genetic.hpp  main.cpp
trunk/0.5/src/po/: Makevars  POTFILES.in  en_GB.gmo  en_GB.po  fr.gmo  fr.po  oriflamms.pot
trunk/0.6/src/: ChangeLog  Doxyfile  projectdir.ini
trunk/0.6/src/oriflamms/: CMakeLists.txt  OriAlignDialog.h  OriDocument.cpp  OriDocument.h  OriFeatures.h  OriGUI.h  OriTEIDisplay.cpp  OriTEIDisplay.h  OriTextSignature.cpp  OriValidationPanel.h  OriViewImpl.h  main.cpp
trunk/0.6/src/po/: fr.po  oriflamms.pot
